# Praat-Note-Parser

./: README.txt  auto_segmenter.py  do_all.py  freq_to_notes.py  individual_notes_file.TextGrid  main.py  phrase_parser.py  pyproject.toml  relative_notes.py  relative_phrases.py  remove_undefined.py
praat_data/: 2019-08-13-2.txt  2019-08-7.txt  2019-8-15  3.txt  EXERPT ZOOM0020_INPUT1 2019-9-2 Chatting with the Jula balafon.txt  ZOOM0005 2019-8-15.txt  ZOOM0020_INPUT1 2019-9-2 Chatting with the Jula balafon IMPROVED2.txt  ZOOM0020_INPUT1 2019-9-2 Chatting with the Jula balafon.txt  balafon_Frequencies.csv  info.txt  test2.txt  undefined_test.txt
textgrid_data/: 2019-08-7_combined.TextGrid  3_relative_phrases.TextGrid  ZOOM0005 2019-8-15_combined.TextGrid  ZOOM0005 2019-8-15_relative_phrases.TextGrid  ZOOM0005 2019-8-15b_combined.TextGrid  exampleA.TextGrid  exampleA_combined.TextGrid  exampleA_frequency_file.TextGrid  exampleA_individual_notes_file.TextGrid  exampleA_note_phrases_file.TextGrid  exampleA_relative_notes_file.TextGrid  exampleA_relative_phrases_file.TextGrid  example_combined.TextGrid  example_rel.TextGrid  example_rel_combined.TextGrid  example_rel_frequency_file.TextGrid  example_rel_individual_notes_file.TextGrid  example_rel_note_phrases_file.TextGrid  example_rel_relative_notes_file.TextGrid  example_rel_relative_phrases_file.TextGrid  undefined_test_2_combined.TextGrid
