[tool.poetry]
name = "tepidironcladbots"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.0"
praat-textgrids = "^1.3.1"
praatio = "^4.2.1"
pyttk = "^0.3.2"
remi = "^2021.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
